--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1085,33 +1085,9 @@ a:hover {
   background-color: #31a9e1;
 }
 
-.card {
-  border: 1px solid #1a1a1a;
-  margin-bottom: 1rem;
-}
 
-.card .card-header {
-  padding: 0.375rem;
-  background-color: #2d3e50;
-  color: #d9e9e8;
-}
 
-.card .card-body {
-  padding: 0.375rem;
-}
 
-.card .card-footer {
-  border-top: 1px solid #1a1a1a;
-  padding: 0.375rem;
-}
-
-.card.card-rounded {
-  border-radius: 0.3rem;
-}
-
-.card.card-rounded .card-header {
-  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
-}
 
 form {
   width: 100%;
@@ -1169,13 +1145,27 @@ label form [type='checkbox'],
 label form [type='radio'] {
   display: inline-block;
 }
-
-.container {
-  width: 85%;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
+
+.justify-flex-start {
+  justify-content: flex-start;
+}
+
+.min-100-vh {
+  min-height: 100vh;
+}
+
+/* This makes the container grow and take remaining vertical space */
+.container {
+  flex: 1;
+  width: 100%;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
 
 .container.container-fluid {
   width: 92%;
