--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1162,7 +1162,7 @@ label form [type='radio'] {
 .container {
   flex: 1;
   width: 100%;
-  margin: 0 auto;
+  margin: 0 0;
   box-sizing: border-box;
 }
 
