--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -8,7 +8,7 @@
 /* Layout */
 .homepage-layout {
     display: flex;
-    width: 100vw;
+    width: 100%;
     overflow-x: hidden;
     padding-left: 0;
     padding-right: 0;
@@ -19,7 +19,7 @@
 /* Sidebar */
 .homepage-sidebar {
     flex: 0 0 320px;
-    background-color: #ffffff;
+    background-color: #bbe5f7;
     box-shadow: 2px 0 15px rgba(0, 0, 0, 0.05);
     display: flex;
     flex-direction: column;
@@ -27,18 +27,17 @@
     padding-top: 10px;
     margin-bottom: 0;
     padding-bottom: 0;    
-    border-right: 1px solid #e2e8f0;         
+    border-right: 1px solid #000000;         
     overflow-y: auto;      
 }
 
 /* Main Content */
 .homepage-main {
     flex-grow: 1;
-    padding-top: 40px;
-    
-    background-color: #f3f5f6;
+    padding-top: 40px;    
+    background-color: #bbe5f7;
     overflow-x: hidden;
-    height: 100%;
+    height: 87vh;
 }
 
 /* Controls Header */
@@ -49,7 +48,7 @@
     align-items: center;
     margin-bottom: 35px;
     padding: 0 2vw 15px;
-    border-bottom: 2px solid #e2e8f0;
+    border-bottom: 2px solid #000000;
 }
 
 .section-title {
@@ -89,7 +88,7 @@
     font-size: 1.2em;
     color: #718096;
     padding: 50px;
-    background-color: #f0f4f8;
+    background-color: #bbe5f7;
     border-radius: 10px;
     margin-top: 30px;
 }
@@ -111,7 +110,7 @@
     height: 100vh;
     font-size: 1.5em;
     color: #4a5568;
-    background-color: #e2e8f0;
+    background-color: #bbe5f7;
 }
 
 .homepage-message.loading p {
@@ -134,13 +133,13 @@
 }
 
 .nav-item {
-    background-color: #ffffff;
+    background-color: #bbe5f7;
     border: none;
     padding: 15px 20px;
     margin-bottom: 10px;
     text-align: left;
     font-size: 1.1em;
-    color: #4a5568;
+    color: #000000;
     cursor: pointer;
     border-radius: 8px;
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
@@ -183,7 +182,7 @@
 }
 
 .interview-card {
-    background-color: #ffffff;
+    background-color: #e4f4fb;
     border-radius: 12px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
     padding: 25px;
@@ -200,14 +199,14 @@
 }
 
 .interview-card h3 {
-    color: #1a202c;
+    color: #000000;
     font-size: 1.4em;
     margin-top: 0;
     margin-bottom: 15px;
 }
 
 .interview-card p {
-    color: #4a5568;
+    color: #393636;
     font-size: 1em;
     margin-bottom: 8px;
 }
