--- a/client/src/css/ProfileSection.css
+++ b/client/src/css/ProfileSection.css
@@ -45,7 +45,7 @@
 }
 
 .sidebar-button {
-    background-color: #4a90e2; /* blue */
+    background-color: #0066ff;/* blue */
     color: white;
     padding: 10px 20px;
     border: none;
